# ralph

./: .gitignore  CLAUDE.md  README.md  Ralph2-Hardening.md  Ralph2file  Ralphfile  Soda-M1-Agent-Infrastructure.md  Soda-M2-State-Layer.md  Soda-M3-Sense-Decide.md  Soda-M4-Orient.md  Soda-M5-Act.md  Soda-M6-Full-Loop.md  THEORY.md  install-ralph3.sh  pyproject.toml  ralph3.sh  test-output.txt
.trace/: id  issues.jsonl
docs/: agent-orchestration-model.md  data-analysis-methodology.md  high-leverage-spec-guide.md  high-leverage-testing-strategy.md  soda-discussion.md  soda-loop.md  soda-orchestration.md  understanding-ralph.md
outputs/: agent_outputs_2026-01-20.jsonl  agent_outputs_2026-01-21.jsonl
scripts/: analyze-ralph2-data.sh
src/ralph/: cli.py  project.py  runner.py  trace.py
src/ralph2/: __init__.py  cli.py  constants.py  feedback.py  git.py  git_manager.py  milestone.py  project.py  runner.py  trace.py
src/soda/: __init__.py  act.py  cli.py  decide.py  errors.py  orient.py  project.py  runner.py  sense.py  types.py  validation.py
tests/: test_agent_streaming.py  test_agents.py  test_cli_integration.py  test_cli_prerequisites.py  test_executor_git_isolation.py  test_executor_git_worktrees.py  test_executor_merge_conflict_resolution.py  test_milestone_completion.py  test_planner_iteration_plan.py  test_planner_memory.py  test_project.py  test_project_memory.py  test_runner.py  test_runner_parallel.py  test_specialist_work_items.py  test_specialists.py  test_state.py  test_verifier_commenting.py
tests/ralph2/: test_auto_resume.py  test_constants.py  (+24 more)
(+50 files in other folders)
