[project]
name = "ralph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "don.schartman", email = "don.schartman@equipmentshare.com" }
]
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
ralph = "ralph.cli:main"
ralph2 = "ralph2.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
